config/applayer.yaml
apiVersion: v1
kind: Service
metadata:
  name: applayer
  labels:
    app: applayer
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 5000
  selector:
    app: applayer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: applayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: applayer
      version: v1
  template:
    metadata:
      labels:
        app: applayer
        version: v1
    spec:
      serviceAccountName: applayer
      containers:
        - image: docker.io/yonghao/applayer_app
          imagePullPolicy: Always
          name: applayer
          ports:
            - containerPort: 5000
