config/core.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreapp
  labels:
    app: coreapp
spec:
  ports:
   - name: http
     port: 8003
     targetPort: 5000
  selector:
    app: coreapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreapp
      version: v1
  template:
    metadata:
      labels:
        app: coreapp
        version: v1
    spec:
      serviceAccountName: coreapp
      containers:
        - image: docker.io/yonghao/applayer_app
          imagePullPolicy: Always
          name: coreapp
          ports:
            - containerPort: 5000
