config/kernel_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: kernel_1
  labels:
    app: kernel_1
spec:
  ports:
    - name: http
      port: 8001
      targetPort: 81
  selector:
    app: kernel_1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kernel_1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kernel_1
      version: v1
  template:
    metadata:
      labels:
        app: kernel_1
        version: v1
    spec:
      serviceAccountName: kernel_1
      containers:
        - image: docker.io/yonghao/iam-poc
          imagePullPolicy: IfNotPresent
          name: kernel_1
          ports:
            - containerPort: 81
