config/kernel_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: kernel2
  labels:
    app: kernel2
spec:
  ports:
    - name: http
      port: 8002
      targetPort: 82
  selector:
    app: kernel2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kernel2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kernel2
      version: v1
  template:
    metadata:
      labels:
        app: kernel2
        version: v1
    spec:
      serviceAccountName: kernel2
      containers:
        - image: docker.io/yonghao/iam-poc
          imagePullPolicy: IfNotPresent
          name: kernel2
          ports:
            - containerPort: 82
