config/istio_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: poc-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapp
spec:
  hosts:
    - "*"
  gateways:
    - poc-gateway
  http:
    - match:
        - uri:
            prefix: /core
      route:
        - destination:
            port:
              number: 8000
            host: coreapp
