config/kernel2_policy.yaml

# Kernel2 destination rule
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "kernel2"
  namespace: "dev"
spec:
  host: "kernel2.dev.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
