config/service_authn.yaml
# coreapp destination rule
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "coreapp"
  namespace: dev
spec:
  host: "coreapp.dev.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---

# Kernel1 destination rule
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "kernel1"
  namespace: dev
spec:
  host: "kernel1.dev.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---

# Kernel2 destination rule
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "kernel2"
  namespace: "dev"
spec:
  host: "kernel2.dev.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
