config/kernel1_policy.yaml

# Kernel1 destination rule
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "kernel1"
  namespace: "dev"
spec:
  host: "kernel1.dev.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---

# AuthZ Policy
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "kernel1-access"
  namespace: dev
spec:
  selector:
    matchLabels:
      app: kernel1
      version: v1
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/dev/sa/kernel2"]
      to:
        - operation:
            methods: ["GET"]
            paths: ["/kernel"]
