config/service_authz_policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "kernel1-access"
  namespace: dev
spec:
  selector:
    matchLabels:
      app: kernel1
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/dev/sa/coreapp"]
      to:
        - operation:
            methods: ["GET"]
